css/style2.css
/* ... */
.projects h2 {
  color: #fff;
  padding: 1rem;
}
.projects .heading span {
  color: #ffd900;
  

}
.projects .box-container {
  display: flex;
  flex-wrap: wrap;
  gap: 1.5rem;
  margin: 5rem;
}
.projects .box-container .box {
  flex: 1 1 50rem;
  border-radius: 0.5rem;
  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1);
  position: relative;
  overflow: hidden;
  height: 30rem;
}
.projects .box-container .box img {
  height: 100%;
  width: 100%;
  object-fit: cover;
}
.projects .box-container .box .content {
  height: 100%;
  width: 100%;
  position: absolute;
  top: 85%;
  left: 0;
  background: rgba(255, 255, 255, 0.9);
  display: flex;
  flex-direction: column;
}
.projects .box-container .box .content .tag {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  height: 4.5rem;
  width: 100%;
  padding-left: 1rem;
  background: #ffd900;
}
.projects .box-container .box .content .tag h3 {
  font-size: 1.5rem;
  justify-content:left;
  
}
.projects .box-container .box:hover .content {
  top: 25%;
  
}

.projects .desc {
  margin: 1.8rem;
  display: flex;
  flex-direction: column;
  justify-content: center;
}
.projects .desc p {
  font-size: 1.5rem;
}

.projects .desc .btns {
  display: flex;
  justify-content: space-between;
  width: 100%;
  margin-top: 2rem;
}
.projects .desc .btns .btn {
  line-height: 0;
  display: inline;
  padding: 1.5rem 2.5rem;
  border-radius: 0.5rem;
  font-size: 1.5rem;
  color: #fff;
  background: rgb(12, 12, 12);
  margin-right: 2rem;
}
.projects .desc .btns .btn:hover {
  background: #310ae0f5;
}
.projects .viewall {
  display: flex;
  justify-content: center;
}
.projects .viewall .btn {
  position: relative;
  line-height: 0;
  padding: 1.6rem 3rem;
  border-radius: 0.5em;
  transition: 0.5s;
  color: rgb(255, 255, 255);
  font-weight: 700;
  border: 2px solid #fff;
  box-shadow: 0px 5px 10px rgba(65, 84, 241, 0.4);
  text-align: center;
}
.projects .viewall .btn span {
  font-weight: 600;
  font-size: 1.7rem;
  font-family: "Nunito", sans-serif;
}
.projects .viewall .btn i {
  margin-left: 0.3rem;
  font-size: 1.5rem;
  transition: 0.3s;
}
.projects .viewall .btn:hover {
  background: #fff;
  color: #000;
}
.projects .viewall .btn:hover i {
  transform: translateX(5px);
}

.modal {
  display: none;
  position: fixed;
  z-index: 1;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  overflow: auto;
  background-color: rgb(0,0,0);
  background-color: rgba(0,0,0,0.4);
}

/* Modal Content */
.modal-content {
  background-color: rgb(255, 255, 255);
  margin: 5% auto;
  padding: 10px;
  border-radius: 1rem;
  width: 60%;
}

/* Close Button */
.close {
  color: #aaa;
  float: right;
  font-size: 30px;
  font-weight: bold;
}

.close:hover,
.close:focus {
  color: black;
  text-decoration: none;
  cursor: pointer;
}
@media screen and (max-width: 600px) {
  .modal-content {
    background-color: #fefefe;
    margin: 50% auto;
    padding: 5px;
    border: 1px solid #888;
    width: 100%;
  }
}




/* work section ends */


/* experience section starts */
.experience .timeline {
  position: relative;
  max-width: 1200px;
  margin: 0 auto;
}
.experience .heading{
  color: rgb(0, 1, 43);
}
.experience .timeline::after {
  content: "";
  position: absolute;
  width: 6px;
  background: rgb(0, 1, 43);
  top: 0;
  bottom: 0;
  left: 50%;
  margin-left: -3px;
  z-index: -2;
}
.experience .container {
  padding: 10px 40px;
  position: relative;
  background-color: inherit;
  width: 50%;
}
/*circles on timeline*/
.experience .container::after {
  content: "\f0b1";
  position: absolute;
  width: 25px;
  height: 25px;
  right: -17px;
  background-color: rgb(255, 255, 255);
  border: 4px solid #ffd900;
  top: 15px;
  border-radius: 50%;
  z-index: 100;
  font-size: 1.89rem;
  text-align: center;
  font-weight: 600;
  color: rgb(0, 1, 43);
  font-family: "Font Awesome\ 5 Free";
}
.experience .left {
  left: 0;
}
.experience .right {
  left: 50%;
}
/* arrows pointing right */
.experience .left::before {
  content: " ";
  height: 0;
  position: absolute;
  top: 22px;
  width: 0;
  z-index: 1;
  right: 30px;
  border: medium solid rgb(0, 1, 43);
  border-width: 10px 0 10px 10px;
  border-color: transparent transparent transparent rgb(0, 1, 43);
}
/* arrows pointing left  */
.experience .right::before {
  content: " ";
  height: 0;
  position: absolute;
  top: 22px;
  width: 0;
  z-index: 1;
  left: 30px;
  border: medium solid rgb(0, 1, 43);
  border-width: 10px 10px 10px 0;
  border-color: transparent rgb(0, 1, 43) transparent transparent;
}
.experience .right::after {
  left: -16px;
}
.experience .content {
  background-color: #ffd900;
  position: relative;
  border-radius: 6px;
}
.experience .content .tag {
  font-size: 1.3rem;
  padding-top: 1.5rem;
  padding-left: 1.5rem;
}
.experience .content .desc {
  margin-left: 1.5rem;
  padding-bottom: 1rem;
}
.experience .content .desc h3 {
  font-size: 1.5rem;
  font-weight: 600;
}
.experience .content .desc p {
  font-size: 1.2rem;
}
/* view all button */
.morebtn {
  display: flex;
  justify-content: center;
}
.morebtn .btn {
  position: relative;
  line-height: 0;
  padding: 1.6rem 3rem;
  border-radius: 0.5em;
  transition: 0.5s;
  color: #fff;
  background: rgb(0, 1, 43);
  box-shadow: 0px 5px 10px rgba(48, 68, 247, 0.6);
 
  text-align: center;
}
.morebtn .btn span {
  font-weight: 600;
  font-size: 1.7rem;
  font-family: "Nunito", sans-serif;
}
.morebtn .btn i {
  margin-left: 0.3rem;
  font-size: 1.5rem;
  transition: 0.3s;
}
.morebtn .btn:hover i {
  transform: translateX(5px);

}
/* ... */

